User Profile Creation Page Backend

--- a/baseapp/templates/baseapp/guilds-components/user-guild-overview.html
+++ b/baseapp/templates/baseapp/guilds-components/user-guild-overview.html
@@ -5,10 +5,7 @@
 {% block guild_tab_header_content %}
 <div class="user-selected-guild">
   <div class="user-selected-guild-icon-container">
-    <img
-      class="user-selected-guild-icon"
-      src="{{ user.user_guild.guild_image.url }}"
-    />
+    <img class="user-selected-guild-icon" src="{{ user.user_guild.guild_image.url }}" />
   </div>
   <div class="user-selected-guild-details">
     <h2 class="user-selected-guild-title">{{ user.user_guild.guild_name }}</h2>
@@ -20,14 +17,11 @@
 {% block guild_tab_body_content %}
 <ul class="guilds-list">
   {% for guild_item in guild %}
+  {% if guild_item != user.user_guild %}
   <li class="guilds-list-item">
     <a href="{% url 'selected-guild' guild_item.slug %}" class="guilds-list-item-link">
       <div class="guilds-list-item-icon-container">
-        <img
-          class="guilds-list-item-icon"
-          src="{{ guild_item.guild_image.url }}"
-          alt=""
-        />
+        <img class="guilds-list-item-icon" src="{{ guild_item.guild_image.url }}" alt="" />
       </div>
       <div class="guilds-list-item-details">
         <p class="guilds-list-item-title">{{ guild_item.guild_name }}</p>
@@ -35,6 +29,7 @@
       </div>
     </a>
   </li>
+  {% endif %}
   {% endfor %}
 </ul>
 {% endblock %}
