--- a/baseapp/templates/baseapp/my-profile-tab.html
+++ b/baseapp/templates/baseapp/my-profile-tab.html
@@ -12,11 +12,7 @@
   </div>
   <div class="user-details-section">
     <div class="user-profile-image-container">
-      <img
-        class="user-profile-image"
-        src="{{ user.user_image.url }}"
-        alt="User Profile Picture"
-      />
+      <img class="user-profile-image" src="{{ user.user_image.url }}" alt="User Profile Picture" />
     </div>
     <div class="user-name">{{ user.username }}</div>
     <div class="user-status-container">
@@ -25,22 +21,17 @@
       </div>
       <div class="user-hp-container">
         <span class="heart-icon">&#10084;</span>
-        <p>&nbsp;&nbsp;&nbsp;{{ user.user_hp }}/100</p>
+        <p>&nbsp;&nbsp;&nbsp;{{ user.user_hp }}/{{ user.user_max_hp }}</p>
       </div>
     </div>
   </div>
   <div class="user-preference-container">
     <div class="user-preference-item-container">
       <div class="user-preference-item-icon-container">
-        <svg
-          class="music-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 51.44 64"
-        >
+        <svg class="music-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 51.44 64">
           <title>Music Icon</title>
           <path
-            d="M51.44,11.72V45.05a4.32,4.32,0,0,1,0,.54c-.41,2.73-3.85,4.87-8.07,4.87-4.5,0-8.12-2.43-8.12-5.41s3.62-5.42,8.12-5.42A10.76,10.76,0,0,1,46,40V11.72a2.67,2.67,0,0,0-2.25-2.65L22.12,5.44a2.74,2.74,0,0,0-2.22.62A2.7,2.7,0,0,0,19,8.12V57.23a5.46,5.46,0,0,1-1.7,3.87A10.89,10.89,0,0,1,9.48,64C4.25,64,0,61,0,57.23s4.25-6.77,9.48-6.77a12.26,12.26,0,0,1,4.06.68v-43A8.11,8.11,0,0,1,23,.11L44.64,3.73A8.06,8.06,0,0,1,51.44,11.72Z"
-          />
+            d="M51.44,11.72V45.05a4.32,4.32,0,0,1,0,.54c-.41,2.73-3.85,4.87-8.07,4.87-4.5,0-8.12-2.43-8.12-5.41s3.62-5.42,8.12-5.42A10.76,10.76,0,0,1,46,40V11.72a2.67,2.67,0,0,0-2.25-2.65L22.12,5.44a2.74,2.74,0,0,0-2.22.62A2.7,2.7,0,0,0,19,8.12V57.23a5.46,5.46,0,0,1-1.7,3.87A10.89,10.89,0,0,1,9.48,64C4.25,64,0,61,0,57.23s4.25-6.77,9.48-6.77a12.26,12.26,0,0,1,4.06.68v-43A8.11,8.11,0,0,1,23,.11L44.64,3.73A8.06,8.06,0,0,1,51.44,11.72Z" />
         </svg>
       </div>
       <div class="genre">
@@ -50,11 +41,7 @@
     </div>
     <div class="user-preference-item-container">
       <div class="user-preference-item-icon-container">
-        <img
-          class="guild-icon"
-          src="{% static 'baseapp/asset/icon/callisto-guild-icon.svg' %}"
-          alt=""
-        />
+        <img class="guild-icon" src="{{ user.user_guild.guild_image.url }}" alt="" />
       </div>
       <div class="guild">
         <p class="user-preference-item-title">Guild</p>
