--- a/baseapp/templates/baseapp/my-tickets-tab.html
+++ b/baseapp/templates/baseapp/my-tickets-tab.html
@@ -4,6 +4,4 @@
 
 {% block tab_title %} My Tickets {% endblock %}
 
-{% block tab_content %}
-MY TICKETS TAB
-{% endblock %}
+{% block tab_content %} {% endblock %}
