Purchase Ticket Done

--- a/baseapp/templates/baseapp/my-tickets-components/buy-tickets.html
+++ b/baseapp/templates/baseapp/my-tickets-components/buy-tickets.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block tab_content %}
+{% block my_tickets_tab_content %}
 <a href="{% url 'user-tickets-overview' %}">
   <button class="go-back-btn">
     Go Back
