--- a/baseapp/templates/baseapp/my-tickets-tab.html
+++ b/baseapp/templates/baseapp/my-tickets-tab.html
@@ -4,4 +4,7 @@
 
 {% block tab_title %} My Tickets {% endblock %}
 
-{% block tab_content %} {% endblock %}
+{% block tab_content %}
+<p>GOLD: {{ user.user_gold }}💰</p>
+{% block my_tickets_tab_content %} {% endblock %}
+{% endblock %}
