--- a/baseapp/templates/baseapp/buy-in-tab.html
+++ b/baseapp/templates/baseapp/buy-in-tab.html
@@ -5,5 +5,5 @@
 {% block tab_title %} Buy In {% endblock %}
 
 {% block tab_content %}
-BUY IN TAB
+{% block buy_ins_tab_content %} {% endblock %}
 {% endblock %}
