--- a/baseapp/templates/baseapp/dashboard.html
+++ b/baseapp/templates/baseapp/dashboard.html
@@ -99,7 +99,7 @@
         </a>
       </li>
       <li class="dashboard-tab">
-        <a href="/buy-in-tab">
+        <a href="{% url 'user-buy-in-overview' %}">
           <div class="dashboard-tab-icon-container">
             <svg class="dashboard-tab-icon" viewBox="0 0 2500 2500">
               <path d="M1539.76,106.07c-130.44-1-259.41,7.81-355.17,102.1q-532,522.48-1054.26,1055.72c-88.91,90.39-82.56,193.46,8.8,285.31C290.09,1701.62,441,1854.05,594.44,2004c93.8,91.85,191,80.61,286.28-1,44.46-38.1,89.9-74.74,118.23-98.68,8.31-464.11,251.6-840.29,833.44-878.88,138.75-109,202.74-249.16,201.77-429.42C2032.2,106.55,2035.62,108.51,1539.76,106.07Zm-47.88,732.8c-102.59-.49-193.46-95.26-191-199.33,2.44-108.94,89.88-191,200.78-183.69,114.81,7.34,176.85,72.79,181.74,186.63C1688.27,748.49,1596.43,839.85,1491.88,838.87Z" />
