--- a/baseapp/static/baseapp/css/tailwind.output.styles.css
+++ b/baseapp/static/baseapp/css/tailwind.output.styles.css
@@ -1208,6 +1208,35 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
+/* BUY IN TAB */
+
+.buy-in-item {
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(91 33 182 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+}
+
+.buy-in-item:hover {
+  cursor: pointer;
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
+}
+
+.buy-with-gold:hover {
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.tickets-available:hover {
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
 /* ADMIN PANEL PAGE */
 
 .admin-panel-background {
